public/javascripts/SVLabel/css/svl-context-menu.css
#context-menu-holder {
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 12px;
    width: 380px;
    background: #FFFFFF;
    border-radius: 8.1px;
    border: solid 1px lightgray;
    visibility: hidden;
    z-index: 1050; /* so that tooltips will show up on top of the navbar */
    box-sizing: border-box;
}

.context-menu-section {
    height: auto;
    width: 100%;
    box-sizing: border-box;
    margin-bottom: 13px;
}

.context-menu-section:last-child {
    margin-bottom: 0;
}

.context-menu-header {
    width: 100%;
    font-family: 'Open Sans', sans-serif;
    font-weight: 700;
    font-size: 12.5px;
    line-height: 17px;
    color: #464646;
    margin-bottom: 5px;
}

.context-menu-info-icon {
    width: 15px;
}

.context-menu-header .tooltip {
    font-size: 10px;
}

#context-menu-tag-holder {
    width: 100%;
    margin: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    gap: 5px 4px;
    padding: 0;
    box-sizing: border-box;
    white-space: pre;
}

#context-menu-tag-holder button {
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 5px 6px;
    height: 17px;
    border: 0.8px solid #666666;
    border-radius: 16px;
    font-size: 10px;
    color: #000000;
    background: white;
    margin: 0;
    outline: none;
    cursor: pointer;
}

#context-menu-tag-holder button:hover,
#context-menu-tag-holder button:focus {
    transition: all 0.3s ease;
    background-color: rgba(167,222,202,0.1);
    color: #40bd90;
    border-color: #40bd90;
}

#context-menu-tag-holder button.selected {
    background: #37A17B;
    color: #FFFFFF;
    border: 1px solid #40bd90;
}

#context-menu-tag-holder button.disabled {
    opacity: 0.5;
    cursor: not-allowed;
}

#severity-menu {
    width: 100%;
    height: auto;
    min-height: fit-content;
    margin-top: 1px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    overflow: visible;
}

#severity-menu.hidden {
    display: none;
    margin: 0;
    height: 0;
    overflow: hidden;
}

#severity-radio-holder {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-between;
    padding: 0;
    width: 130px;
    height: auto;
    margin-top: 0;
}

.severity-level {
    position: relative;
    width: 30px;
    height: 40px;
    cursor: pointer;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.severity-level label {
    display: flex;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
    width: 100%;
    height: auto;
}

.severity-level input[type="radio"] {
    position: absolute;
    opacity: 0;
    width: 0;
    height: 0;
}

.severity-level .severity-icon {
    width: 25px;
    height: 25px;
    border-radius: 50%;
    margin-bottom: 5px;
    overflow: visible;
}

.severity-level .severity-icon svg {
    width: 100%;
    height: 100%;
}

.severity-level .severity-icon svg use {
    fill: white;
    stroke: #2D2A3F;
}

.facial-feature {
    fill: #2D2A3F;
}

.severity-level .severity-label {
    font-family: 'Open Sans', sans-serif;
    font-weight: 600;
    font-size: 10px;
    text-align: center;
    color: #514d4d;
}

/* We should add transition only when the cursor is on the context menu. */
/* Otherwise, it causes a delay when the context menu is closed and re-opened. */
#context-menu-holder:hover .severity-level .severity-icon svg use{
    transition: fill 0.3s;
}

.severity-level:hover .severity-icon.severity-1 svg use {
    fill: rgba(244, 219, 72, 0.55);
}
.severity-level:hover .severity-icon.severity-2 svg use {
    fill: rgba(238, 157, 58, 0.55);
}
.severity-level:hover .severity-icon.severity-3 svg use {
    fill: rgba(232, 95, 43, 0.55);
}

.severity-level input:checked ~ .severity-icon.severity-1 svg use {
    fill: #f4db48;
}
.severity-level input:checked ~ .severity-icon.severity-2 svg use {
    fill: #ee9d3a;
}
.severity-level input:checked ~ .severity-icon.severity-3 svg use {
    fill: #e85f2b;
}

#context-menu-description-section {
    width: 100%;
    height: auto;
    margin-top: 5px;
}

#context-menu-description-text-box {
    box-sizing: border-box;
    height: 23px;
    width: 100%;
    padding: 4.9px 10px 4.9px 4px;
    border: 0.8px solid #9C9C9C;
    border-radius: 4px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    font-size: 9px;
    line-height: 12px;
    color: #9C9C9C;
}

#context-menu-description-text-box:not(:placeholder-shown) {
    color: #000000;
}

#context-menu-ok-button {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 4px 8px;
    width: 31px;
    height: 100%;
    background: #37A17B;
    border-radius: 4px;
    border: none;
    font-family: 'Inter', sans-serif;
    font-weight: 600;
    font-size: 9.7px;
    line-height: 12px;
    color: #FFFFFF;
}

#context-menu-close-button-holder {
    position: absolute;
    width: 20px;
    height: 20px;
    right: 10px;
    top: 10px;
}

#context-menu-close-button {
    width: 20px;
    height: 20px;
    background: transparent;
    border: none;
    color: #9F9DB1;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    cursor: pointer;
    overflow: visible;
}

.description-input-frame {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 0;
    gap: 11px;
    width: 100%;
    height: 23px;
    box-sizing: border-box;
}

tag-underline {
    text-decoration: underline;
    pointer-events: none;
}

.tooltip.in {
    opacity: 1;
    filter: alpha(opacity=100);
}

